kubernetes/apps/ai/dex/app/securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: dex-cors
spec:
  cors:
    allowHeaders:
      - Authorization
      - Content-Type
    allowMethods:
      - GET
      - POST
      - OPTIONS
    allowOrigins:
      - http://localhost:6274 # Needed for MCP Inspector
    exposeHeaders:
      - '*'
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: dex
